--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node server/server.js",
-    "dev": "NODE_ENV=development webpack serve --mode=development",
+    "dev": "NODE_ENV=development webpack serve --mode=development & NODE_ENV=development nodemon server/server.js",
     "prod": "NODE_ENV=production webpack --mode=production"
   },
   "repository": {
