--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.2.2",
     "cookie-session": "^1.4.0",
     "css-loader": "^5.2.4",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
